--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +29,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in Mongolia. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Morin Hun</p>
+          <p>Morin Hun</p>
+          <p class="card-text">Morin Hun is a trusted car dealer known for helping customers find reliable, well-priced vehicles that suit their needs. With years of experience in the auto industry, he offers expert advice and personalized service to make every car-buying experience smooth and satisfying.</p>
+          <p>morinhun5@gmail.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Enkh-Ider Jargalsaikhan</p>
+          <p>Enkh-Ider Jargalsaikhan</p>
+          <p class="card-text">Enkh-Ider Jargalsaikhan is a dedicated car dealer who takes pride in offering high-quality vehicles and honest guidance. He is committed to building long-term customer relationships through transparency, integrity, and excellent service.</p>
+          <p>idereej@gmail.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Horsen Tarzanovich</p>
+          <p>Horsen Tarzanovich</p>
+          <p class="card-text">Horsen Tarzanovich is a passionate car dealer known for his sharp eye for value and commitment to customer satisfaction. He works closely with clients to ensure they drive away with the perfect vehicle for their lifestyle and budget.</p>
+          <p>horsentarzanovich@gmail.com</p>
         </div>
       </div>
     </div>
